--- a/basic_python_functions_study_notes.ipynb
+++ b/basic_python_functions_study_notes.ipynb
@@ -1,5 +1,292 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "7724fd37",
+   "metadata": {},
+   "source": [
+    "# Basic Python Functions: Study Notes\n",
+    "\n",
+    "This notebook covers the essentials of Python functions, including definitions, parameters, return values, argument types, lambda functions, documentation, and practical usage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b68d23e1",
+   "metadata": {},
+   "source": [
+    "## 1. Defining a Basic Function\n",
+    "\n",
+    "A function in Python is a reusable block of code that performs a specific task. Functions help organize code and avoid repetition.\n",
+    "\n",
+    "**Syntax:**\n",
+    "```python\n",
+    "def function_name():\n",
+    "    # code block\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0620f63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Defining and calling a simple function\n",
+    "\n",
+    "def greet():\n",
+    "    print(\"Hello, welcome to Python functions!\")\n",
+    "\n",
+    "# Call the function\n",
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "797a9ccc",
+   "metadata": {},
+   "source": [
+    "## 2. Function with Parameters\n",
+    "\n",
+    "Functions can accept parameters (inputs) to work with different data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af81c527",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Function with parameters\n",
+    "\n",
+    "def greet_person(name):\n",
+    "    print(f\"Hello, {name}!\")\n",
+    "\n",
+    "# Call the function with an argument\n",
+    "greet_person(\"Alice\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a220ecf",
+   "metadata": {},
+   "source": [
+    "## 3. Function with Return Value\n",
+    "\n",
+    "Functions can return values using the `return` statement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5464829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Function with a return value\n",
+    "\n",
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "result = add(3, 5)\n",
+    "print(\"Sum:\", result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16364d37",
+   "metadata": {},
+   "source": [
+    "## 4. Default Parameter Values\n",
+    "\n",
+    "You can assign default values to function parameters. If an argument is not provided, the default is used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66be3c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Default parameter values\n",
+    "\n",
+    "def greet(name=\"Guest\"):\n",
+    "    print(f\"Hello, {name}!\")\n",
+    "\n",
+    "greet()         # Uses default value\n",
+    "greet(\"Bob\")    # Overrides default value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45aa9e11",
+   "metadata": {},
+   "source": [
+    "## 5. Keyword Arguments\n",
+    "\n",
+    "You can call functions using keyword arguments, which makes the code more readable and allows arguments to be passed in any order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75026bb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Using keyword arguments\n",
+    "\n",
+    "def describe_pet(animal, name):\n",
+    "    print(f\"I have a {animal} named {name}.\")\n",
+    "\n",
+    "describe_pet(animal=\"dog\", name=\"Buddy\")\n",
+    "describe_pet(name=\"Whiskers\", animal=\"cat\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d468142",
+   "metadata": {},
+   "source": [
+    "## 6. Variable Number of Arguments (*args and **kwargs)\n",
+    "\n",
+    "You can use `*args` to accept a variable number of positional arguments and `**kwargs` for variable keyword arguments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7ddb888",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: *args and **kwargs\n",
+    "\n",
+    "def print_numbers(*args):\n",
+    "    for num in args:\n",
+    "        print(num)\n",
+    "\n",
+    "print_numbers(1, 2, 3, 4)\n",
+    "\n",
+    "\n",
+    "def print_info(**kwargs):\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(f\"{key}: {value}\")\n",
+    "\n",
+    "print_info(name=\"Alice\", age=25, city=\"Delhi\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09bb0210",
+   "metadata": {},
+   "source": [
+    "## 7. Lambda (Anonymous) Functions\n",
+    "\n",
+    "Lambda functions are small, anonymous functions defined with the `lambda` keyword. They are useful for short, simple operations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c57cd76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Lambda function\n",
+    "\n",
+    "square = lambda x: x * x\n",
+    "print(square(5))\n",
+    "\n",
+    "# Lambda with map()\n",
+    "numbers = [1, 2, 3, 4]\n",
+    "squares = list(map(lambda x: x**2, numbers))\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5779648",
+   "metadata": {},
+   "source": [
+    "## 8. Docstrings and Function Documentation\n",
+    "\n",
+    "A docstring is a special string used to document a function. It is placed as the first statement in the function body and can be accessed with the `help()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a2ca992",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Function with a docstring\n",
+    "\n",
+    "def multiply(a, b):\n",
+    "    \"\"\"\n",
+    "    Multiply two numbers and return the result.\n",
+    "    Args:\n",
+    "        a (int or float): First number\n",
+    "        b (int or float): Second number\n",
+    "    Returns:\n",
+    "        int or float: The product of a and b\n",
+    "    \"\"\"\n",
+    "    return a * b\n",
+    "\n",
+    "help(multiply)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03296132",
+   "metadata": {},
+   "source": [
+    "## 9. Using Functions in Practice\n",
+    "\n",
+    "Functions help organize code, avoid repetition, and solve problems efficiently. Here are some practical examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d8853b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example 1: Find the maximum of three numbers\n",
+    "\n",
+    "def find_max(a, b, c):\n",
+    "    return max(a, b, c)\n",
+    "\n",
+    "print(find_max(10, 20, 15))\n",
+    "\n",
+    "# Example 2: Check if a number is even or odd\n",
+    "\n",
+    "def is_even(n):\n",
+    "    return n % 2 == 0\n",
+    "\n",
+    "print(is_even(7))\n",
+    "print(is_even(8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d6e8ac7",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "**Summary:**\n",
+    "- Functions are essential for code organization and reusability.\n",
+    "- Use parameters, return values, and documentation to write clear, flexible functions.\n",
+    "- Practice writing and using functions to improve your Python skills!"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
